# gnome-keyring-unlock

./: .gitignore  Cargo.toml  MAKEPKG  PKGBUILD  README.md
config/: gkd-unlock.service  gkd-unlock.yaml
src/: gkd_protocol.rs  main.rs  unlock-keyring.c
